--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
- <header>
-    <h1>Floppy Bird</h1>
-    <div class="score-container">
-      <div id="bestScore"></div>
-      <div id="currentScore"></div>
-    </div>
-  </header>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+  <title>Floppy Bird</title>
 
-  <canvas id="canvas" width="431" height="768"></canvas>
+  <link href="./style.css" rel="stylesheet">
+</head>
+
+<body>
+
+
+
+  <script src="./script.js" type="text/javascript" ></script>
+</body>
+
+
+
+</html>
