--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     
   <title>Floppy Bird</title>
 
-  <link href="./style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
 
 
 
-  <script src="./script.js" type="text/javascript" ></script>
+  <script src="script.js" type="text/javascript" ></script>
 </body>
 
 
